--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>Module 2 Website</head>
+    <head>
+        <title>Module 2 Website</title>
+    </head>
     <body>
         <h1>Hello World</h1>
     </body>
