--- a/index.html
+++ b/index.html
@@ -4,7 +4,47 @@
         <title>Module 2 Website</title>
     </head>
     <body>
-        <h1>Hello World</h1>
-    </body>
+        <div>
+            <h1>Our Menu</h1>
+        </div>
 
+        <div class = "menu_item">
+            <div class = "menu_title" id = "title_chicken">
+                <h2>Chicken</h2>
+            </div>
+
+            <div class = "menu_text">
+                <p>
+                    Duis et neque mauris. Morbi id tempus sem. Quisque a efficitur sapien. Curabitur eu lacus faucibus, pulvinar neque nec, posuere purus. Sed dapibus suscipit fermentum. Ut vitae porttitor arcu. Integer sed purus consequat, placerat odio ac, condimentum nulla. Nullam sit amet enim feugiat, congue nisi id, porttitor nunc. Ut ultrices leo in orci sollicitudin semper. Phasellus sollicitudin massa risus, id luctus sem lobortis vitae.
+                </p>
+            </div>
+        </div>
+
+        <div class = "menu_item">
+            <div class = "menu_title" id = "beef">
+                <h2>Beef</h2>
+            </div>
+            
+            <div class = "menu_text">
+                <p>
+                    Nulla vulputate metus purus, et viverra nisl hendrerit ut. Aliquam erat volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus aliquam sodales dui. Fusce ut risus dictum, posuere magna feugiat, semper metus. Nulla vitae est mauris. Sed ac augue fermentum, iaculis tellus a, semper enim. Et viverra nisl hendrerit ut. Proin rhoncus est ac metus faucibus tristique.
+
+
+                </p>
+            </div>
+        </div>
+
+        <div class = "menu_item">
+            <div class = "menu_title" id = "sushi">
+                <h2>Sushi</h2>
+            </div>
+
+            <div class = "menu_text">
+                <p>
+                    Sed viverra sapien non fermentum iaculis. Morbi a neque mollis, elementum lorem vitae, venenatis nibh. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras mollis ultrices velit, ac tempus est commodo sed. Aenean in urna in justo pretium congue. Fusce lacus mi, faucibus eget posuere et, aliquet vel elit. Suspendisse rutrum, metus ac egestas semper, massa elit volutpat nulla, in vehicula nulla tortor a nisi.
+                </p>
+            </div>
+        </div>
+
+    </body>
 </html>
