--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
             </div>
         </div>
 
-        <div class = "menu_item">
+        <div class = "menu_item" id = "menu_sushi">
             <div class = "menu_title" id = "title_sushi">
                 <h2>Sushi</h2>
             </div>
 
             <div class = "menu_text">
                 <p>
-                    Sed viverra sapien non fermentum iaculis. Morbi a neque mollis, elementum lorem vitae, venenatis nibh. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras mollis ultrices velit, ac tempus est commodo sed. Aenean in urna in justo pretium congue. Fusce lacus mi, faucibus eget posuere et, aliquet vel elit. Suspendisse rutrum, metus ac egestas semper, massa elit volutpat nulla, in vehicula nulla tortor a nisi.
+                    Sed viverra sapien non fermentum iaculis. Morbi a neque mollis, elementum lorem vitae, venenatis nibh. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras mollis ultrices velit, ac tempus est commodo sed. Aenean in urna in justo pretium congue. Fusce lacus mi, faucibus eget posuere et, aliquet vel elit. Suspendisse rutrum, metus ac egestas semper, massa elit volutpat nulla, in vehicula.
                 </p>
             </div>
         </div>
